Seção de temas adicionada

--- a/index.html
+++ b/index.html
@@ -175,6 +175,170 @@
                   <input type="radio" name="color" value="cyan" id="cyan" />
                 </div>
               </div>
+
+              <div class="radio-wrapper top">
+                <label for="theme">Tema do evento</label>
+                <div class="themes-wrapper">
+                  <div class="theme-inner">
+                    <input
+                      type="radio"
+                      name="theme"
+                      id="birthday"
+                      value="birthday"
+                      checked
+                    />
+                    <img
+                      src="assets/themes/birthday.svg"
+                      alt="Imagem de aniversário"
+                    />
+                    <label for="birthday">Aniversário</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="child" value="child" />
+                    <img
+                      src="assets/themes/child.svg"
+                      alt="Imagem de evento infantil"
+                    />
+                    <label for="child">Infantil</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input
+                      type="radio"
+                      name="theme"
+                      id="graduation"
+                      value="graduation"
+                    />
+                    <img
+                      src="assets/themes/graduation.svg"
+                      alt="Imagem de um chapéu de formatura"
+                    />
+                    <label for="graduation">Formatura</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input
+                      type="radio"
+                      name="theme"
+                      id="wedding"
+                      value="wedding"
+                    />
+                    <img
+                      src="assets/themes/wedding.svg"
+                      alt="Imagem de alianças de casamento"
+                    />
+                    <label for="wedding">Casamento</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input
+                      type="radio"
+                      name="theme"
+                      id="baby-shower"
+                      value="baby-shower"
+                    />
+                    <img
+                      src="assets/themes/baby-shower.svg"
+                      alt="Imagem de um lenço para bebês"
+                    />
+                    <label for="baby-shower">Chá de bebê</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input
+                      type="radio"
+                      name="theme"
+                      id="bridal-shower"
+                      value="bridal-shower"
+                    />
+                    <img
+                      src="assets/themes/bridal-shower.svg"
+                      alt="Imagem de uma cozinha"
+                    />
+                    <label for="bridal-shower">Chá de panela</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input
+                      type="radio"
+                      name="theme"
+                      id="carnival"
+                      value="carnival"
+                    />
+                    <img
+                      src="assets/themes/carnival.svg"
+                      alt="Imagem de confete"
+                    />
+                    <label for="carnival">Carnaval</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input
+                      type="radio"
+                      name="theme"
+                      id="easter"
+                      value="easter"
+                    />
+                    <img
+                      src="assets/themes/easter.svg"
+                      alt="Imagem de ovos de páscoa"
+                    />
+                    <label for="easter">Páscoa</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input
+                      type="radio"
+                      name="theme"
+                      id="saint-johns"
+                      value="saint-johns"
+                    />
+                    <img
+                      src="assets/themes/saint-johns.svg"
+                      alt="Imagem de festa junina"
+                    />
+                    <label for="saint-johns">São João</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input
+                      type="radio"
+                      name="theme"
+                      id="halloween"
+                      value="halloween"
+                    />
+                    <img
+                      src="assets/themes/halloween.svg"
+                      alt="Imagem de abóboras de halloween"
+                    />
+                    <label for="halloween">Halloween</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input
+                      type="radio"
+                      name="theme"
+                      id="christmas"
+                      value="christmas"
+                    />
+                    <img
+                      src="assets/themes/christmas.svg"
+                      alt="Imagem de presentes de natal"
+                    />
+                    <label for="christmas">Natal</label>
+                  </div>
+
+                  <div class="theme-inner">
+                    <input type="radio" name="theme" id="other" value="other" />
+                    <img
+                      src="assets/themes/other.svg"
+                      alt="Imagem de pessoas brindando"
+                    />
+                    <label for="other">Outro</label>
+                  </div>
+                </div>
+              </div>
             </fieldset>
           </form>
         </div>
