--- a/index.html
+++ b/index.html
@@ -339,6 +339,23 @@
                   </div>
                 </div>
               </div>
+
+              <div class="flex top">
+                <div class="style-wrapper">
+                  <label for="style">Estilo</label>
+                  <div class="switch-wrapper">
+                    <div class="switch">
+                      <input type="checkbox" name="switch" id="switch" />
+                      <label for="switch"></label>
+                    </div>
+                    <span></span>
+                  </div>
+                </div>
+                <div class="file-wrapper" style="display: none">
+                  <input type="file" name="banner" id="banner" />
+                  <label for="banner"></label>
+                </div>
+              </div>
             </fieldset>
           </form>
         </div>
