Botão de submit concluído

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
                   name="title"
                   placeholder="Nome do evento"
                 />
+                <!-- <div class="error">
+                  <img
+                    src="assets/icons/alert-circle.svg"
+                    alt="Ícone de alerta vermelho"
+                  />
+                  <span>Insira um e-mail válido</span>
+                </div> -->
               </div>
 
               <div class="flex">
@@ -451,3 +458,11 @@
     </div>
   </body>
 </html>
+
+<!-- <div class="error">
+                  <img
+                    src="assets/icons/alert-circle.svg"
+                    alt="Ícone de alerta vermelho"
+                  />
+                  <span>Insira um e-mail válido</span>
+                </div> -->
